fix spacing errors in code

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 div {
   background-color: rgb(170, 170, 231);
   border: 10px solid black;
+  padding: 10px;
 }
 
 .bold {
@@ -25,14 +26,11 @@ img {
   margin-right: 50px;
   border: 20px solid black;
   padding: 10px;
+  background-color: lightgrey;
 }
 
 h2 {
   text-decoration: underline;
-}
-
-.mainbody {
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 ul {
